--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Mentalist Game</title>
+  <title>THQTH Awakening Game</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,14 +12,14 @@
 
 <head>
   <title>
-    Mentalist Game
+  THQTH Awakening Game
   </title>
 </head>
 
 <body>
   <div class="container">
     <h1 class="page-title">
-      Mentalist Game
+     THQTH Awakening Game
     </h1>
     <p class="page-subtitle">
       Type a number from 0 to 10
